--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.9",
     "json-server": "^0.16.3"
   }
 }
