--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
